27.7.16
-------

27.7.15
-------
(RB=1853192)
Update PDL schema parser and encoder to allow properties with dots in them. Properties with dots are escaped using back-tick ` character.

(RB=1854466)
Optimizing UriBuilder & validatePathKeys.

27.7.14
-------
(RB=1854364)
LoadBalancer: when using empty d2ServicePath, use the default service path. Consolidating code between ZKFS and LastSeen code paths

27.7.13
-------
(RB=1855054)
Remove configure task for data template

(RB=1848734)
Adding JMX registration of D2 LoadBalancer components

27.7.12
-------
(RB=1851128)
Right size the DataObjectToObjectCache used for wrapped fields to avoid wasting memory.

27.7.11
-------
(RB=1847578)
Adding initial capacity to clientsToLoadBalance list and trackerClientMap to avoid expensive resize operations.
(RB=1843935)
Generate ToString, Equals and Hashcode for PathSegment

27.7.10
-------
(RB=1849070)
Introduce new protobuf codec

27.7.9
------
(RB=1845042)
Fix codec bugs and improve deserialization performance

27.7.8
------
(RB=1846176)
Add support to compare DataList without order, by sorting them with a comparator.

27.7.7
------
(RB=1845865)
Refactor disruptor code path to use common method for adding disrupt context

(RB=1843206)
Update GenerateRestModelTask to have an ordered set for setWatchedInputDirs input property.

27.7.6
------
(RB=1836131)
Move NO_RESPONSE to RestResponseFactory.

27.7.5
------
(RB=1837489)
Fixing JSON deserialization bug  while setting partition weight via JMX using JSON format

27.7.4
------
(RB=1813571)
Add varargs constructor to primitive arrays.

27.7.3
------
(RB=1834552)
Fixing possible IC corruption issue in dealing with cached CompletionStage.

27.7.2
------
(RB=1831592)
Small improvement in test performance for the ClockExecutor

27.7.1
------
(RB=1818010)
Adding cache to store 'serviceName' in Request and 'protocolVersion' in RestClient.

(RB=1817516)