@@ -43,7 +43,7 @@ project.ext.externalDependency = [
   'commonsLang': 'commons-lang:commons-lang:2.6',
   'commonsLang3': 'org.apache.commons:commons-lang3:3.4',
   'disruptor': 'com.lmax:disruptor:3.2.0',
-  'easymock': 'org.easymock:easymock:3.1',
+  'easymock': 'org.easymock:easymock:4.0.2',
   'mockito': 'org.mockito:mockito-all:1.9.5',
   'guava': 'com.google.guava:guava:19.0',
   'httpclient': 'org.apache.httpcomponents:httpclient:4.3.1',
@@ -53,6 +53,8 @@ project.ext.externalDependency = [
   'jacksonDataBind': 'com.fasterxml.jackson.core:jackson-databind:2.9.7',
   'jacksonCoreAsl_1_4': 'org.codehaus.jackson:jackson-core-asl:1.4.2',
   'jacksonCoreAsl_1_8': 'org.codehaus.jackson:jackson-core-asl:1.8.8',
+  "javaxActivation": "com.sun.activation:javax.activation:1.2.0",
+  'javaxAnnotation': 'javax.annotation:javax.annotation-api:1.3.1',
   'javaxInject': 'javax.inject:javax.inject:1',
   'jdkTools': files("${System.getProperty('java.home')}/../lib/tools.jar"),
   'jettyAlpnServer': 'org.eclipse.jetty:jetty-alpn-server:9.3.21.v20170918',
@@ -162,6 +164,7 @@ subprojects {
         pegasusPlugin project(':data-avro-generator')
         pegasusPlugin project(':generator')
         pegasusPlugin project(':restli-tools')
+        pegasusPlugin externalDependency.javaxAnnotation
       }
     } else {
       apply from: "${buildScriptDirPath}/cleanGenerated.gradle", to: it
@@ -354,8 +357,8 @@ subprojects {
     // and "out/test/$MODULE_NAME". Changing it so IDEA and gradle share
     // the class output directory.
 
-    outputDir = sourceSets.main.output.classesDir
-    testOutputDir = sourceSets.test.output.classesDir
+    outputDir = sourceSets.main.output.classesDirs.getSingleFile()
+    testOutputDir = sourceSets.test.output.classesDirs.getSingleFile()
   }
 
   test {
