@@ -7,6 +7,7 @@ dependencies {
   compile externalDependency.jacksonCore
   compile externalDependency.jacksonSmile
   compile externalDependency.protobuf
+  runtime externalDependency.javaxAnnotation
 
   testCompile project(':data-testutils')
   testCompile externalDependency.commonsIo
