@@ -10,7 +10,6 @@ project.sourceSets.test.java.srcDir('src/test/javaPegasus')
 project.idea.module.testSourceDirs.add('src/test/javaPegasus')
 
 apply from: "${buildScriptDirPath}/dataTemplate.gradle"
-apply from: "${buildScriptDirPath}/cleanGenerated.gradle"
 apply from: "${buildScriptDirPath}/avroSchema.gradle"
 
 // generate pdsc files under "unionPegasus" directory with explicit ordering
