@@ -4,6 +4,7 @@ dependencies {
   compile project(':pegasus-common')
   compile externalDependency.servletApi
   compile externalDependency.mail
+  compile externalDependency.javaxActivation
   testCompile project(':r2-testutils')
   testCompile project(':test-util')
   testCompile externalDependency.testng
