@@ -6,6 +6,7 @@ dependencies {
   compile project(':r2-core')
   compile project(':multipart-mime')
   compile externalDependency.jacksonCore
+  compile externalDependency.javaxAnnotation
   testCompile project(path: ':data', configuration: 'testArtifacts')
   testCompile project(path: ':generator-test', configuration: 'testArtifacts')
   testCompile project(path: ':restli-internal-testutils', configuration: 'testArtifacts')
