@@ -1,5 +1,7 @@
 27.7.16
 -------
+(RB=1411984)
+Make Pegasus Java 8 and Java 11 compatible
 
 27.7.15
 -------
